2008-05-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  --sources option should not
	add URIs to Gem.sources.

2008-05-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Add #uri to
	Gem::RemoteFetcher::FetchError.
	* lib/rubygems/user_interaction.rb:  Improve RDoc slightly.
	* lib/rubygems/spec_fetcher.rb:  Introduce backwards compatibility for
	legacy (pre 1.2) repositories
	* lib/rubygems/commands/sources_command.rb:  Backwards compatibility
	and restoration of --update.
	* lib/rubygems/specification.rb:  Ensure nil-typed dependencies become
	runtime dependencies.

2008-05-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/spec_fetcher.rb:  Switch #fetch, #find_matching to be
	compatible with Gem::SourceInfoCache#search_with_source.  Add caching
	for .gemspec files.
	* lib/rubygems/dependency_installer.rb:  Switch to SpecFetcher.
	* lib/rubygems/source_index.rb:  Switch #outdated to use SpecFetcher.
	* lib/rubygems/commands/dependency_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/outdated_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/query_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/sources_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/update_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/version.rb:  Handle comparisons with non-Gem::Version
	objects.

2008-05-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/spec_fetcher.rb:  Add caching of specs, latest_specs
	files.
	* test/gemutilities.rb:  Ensure Gem.user_home doesn't point to ~.

2008-05-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Add Marshal format index of spec names,
	versions and platforms.  WIP.
	* lib/rubygems/spec_fetcher.rb:  WIP for replacement of
	Gem::SourceInfoCache and SourceInfoCacheEntry.
	* lib/rubygems/dependency.rb:  Add #=~.

2008-05-07 John Barnette <jbarnette@gmail.com>
