@@ -91,7 +91,22 @@ class Gem::Commands::QueryCommand < Gem::Command
       all = options[:all]
 
       dep = Gem::Dependency.new name, Gem::Requirement.default
-      spec_tuples = Gem::SpecFetcher.fetcher.find_matching dep, all, false
+      begin
+        fetcher = Gem::SpecFetcher.fetcher
+        spec_tuples = fetcher.find_matching dep, all, false
+      rescue Gem::RemoteFetcher::FetchError => e
+        raise unless fetcher.warn_legacy e do
+          require 'rubygems/source_info_cache'
+
+          dep.name = '' if dep.name == //
+
+          specs = Gem::SourceInfoCache.search_with_source dep, false, all
+
+          spec_tuples = specs.map do |spec, source_uri|
+            [[spec.name, spec.version, spec.original_name, spec], source_uri]
+          end
+        end
+      end
 
       output_query_results spec_tuples
     end
